--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,11 @@
      object-fit: cover;
 }
 
-.services_details .service_Details p {
+.services_details .service_Details .list-heading {
+  text-transform: capitalize;
+}
+
+.services_details .service_Details .service-name, .services_details .service_Details p {
   margin-top: 20px;
 }
 
@@ -120,6 +124,29 @@
   margin-left: -0.9em;
   font-weight: bold;
   font-size: 1.5rem;
+}
+
+.services_details .service_Details .actions {
+  margin-top: 50px;
+}
+
+.services_details .service_Details .actions .action-button {
+  padding: 15px 10px;
+  color: #fff;
+  background-color: #05A679;
+  display: block;
+  width: 30%;
+  border: 1px solid transparent;
+  margin: auto;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 575.98px) {
+  .services_details .service_Details .actions .action-button {
+    width: 100%;
+  }
 }
 
 .services_details .service_Details.active {
